--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ main {
 
 h1 {
   font-size: 25px;
-  font-weight: 400;
+  font-weight: 600;
   font-family: sans-serif;
   text-align: center;
   margin: 20px 0 0 0;
@@ -22,7 +22,7 @@ h2 {
   font-weight: 400;
   font-family: sans-serif;
   text-align: center;
-  margin: 10px 0 0 0;
+  margin: 10px 0 50px 0;
 }
 
 #container {
@@ -33,51 +33,19 @@ h2 {
 
 #legend {
   position: absolute;
-  right: 60px;
-  top: 60px;
+  right: 80px;
+  top: 0;
   margin: 0;
 }
 
-#legend li {
-  list-style-type: none;
-  position: relative;
-  padding-left: 13px;
-  margin-bottom: 5px;
-  font-family: sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-}
-
-#legend li::before {
-  content: "";
-  width: 11px;
-  height: 11px;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 2px;
-}
-
-#legend li:first-child::before {
-  background-color: #3d348b;
-}
-
-#legend li:last-child::before {
-  background-color: #f35b04;
-}
-
-.dot {
-  border: 1px solid black;
-}
-
 #tooltip {
-  visibility: hidden;
-  width: fit-content;
-  height: auto;
-  background-color: #7678ed;
-  border-radius: 5px;
-  padding: 5px;
-  opacity: 80%;
-  position: fixed;
+	position: absolute;
+	padding: 10px;
+	font: 12px Arial;
+	background: rgba(255, 255, 204, 0.9);
+	box-shadow: 1px 1px 10px rgba(128, 128, 128, 0.6);
+	border: 0px;
+	border-radius: 4px;
+	pointer-events: none;
+  opacity: 0.8;
 }
